# verisearch

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_READINESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  setup_db.py  test_mcp.py  test_production.py
backend/: Dockerfile  Procfile  README.md  __init__.py  pyproject.toml  start.sh
backend/answer_engine/: __init__.py  citations.py  highlights.py  models.py  provider.py  service.py  summaries.py
backend/api_gateway/: __init__.py  app.py  contents.py  errors.py  mcp_sse.py  openapi_spec.py  persistence.py  routes.py  sse.py  validation.py  websocket.py
backend/audit_log/: __init__.py  deletion.py  guards.py  in_memory.py  service.py
backend/auth/: __init__.py  key_management.py  service.py
backend/config/: __init__.py  constants.py  feature_flags.py  settings.py  tenant_defaults.py
backend/crawler/: __init__.py  fetcher.py  models.py  opt_out.py  robots.py  throttle.py
backend/indexer/: __init__.py  cleaner.py  dlq.py  embeddings.py  hasher.py  kafka_ingest.py  lexical.py  scheduler.py  service.py
backend/mcp_server/: __init__.py  schemas.py  server.py
backend/pii_redactor/: __init__.py  patterns.py  redactor.py
backend/pipeline_engine/: __init__.py  executor.py  models.py  registry.py  service.py
backend/provenance_scorer/: __init__.py  scorer.py
backend/query_filter/: __init__.py  ast_types.py  errors.py  parser.py  printer.py
backend/rate_limiter/: __init__.py  metering.py  metering_buffer.py  token_bucket.py
backend/research_agent/: __init__.py  budget.py  events.py  executor.py  models.py  planner.py  service.py
backend/retriever/: __init__.py  cache.py  filters.py  find_similar.py  hybrid.py  keyword.py  models.py  neural.py  opensearch_client.py  ordering.py  service.py
backend/session_store/: __init__.py  models.py  service.py
backend/storage/: __init__.py  object_store.py
backend/tests/: conftest.py  test_answer_engine.py  test_answer_engine_properties.py  test_api_gateway.py  test_audit_deletion.py  test_audit_guards.py  test_audit_immutability.py  test_audit_log_service.py  test_audit_properties.py  test_audit_retention.py  test_auth_audit.py  test_auth_properties.py  test_auth_service.py  test_authorization.py  (+39 more)
(+68 files in other folders)
