[tool.poetry]
name = "agentic-research-sdk"
version = "0.1.0"
description = "Python SDK for the Agentic Research Search Engine API"
authors = ["Agentic Research Team"]
readme = "README.md"
packages = [{include = "agentic_research_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.28.1"
pydantic = "2.10.4"
aiohttp = "3.11.11"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
hypothesis = "6.119.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
